# readcon-core

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Cargo.toml  LICENSE  README.md  asv.conf.json  build.rs  cbindgen.toml  codecov.yml  cog.toml  dist-workspace.toml  lychee.toml  meson.build  meson_options.txt  pixi.toml  pyproject.chemfiles.toml  pyproject.toml  readme.org  readme_src.org  valgrind.supp
.cargo/: config.toml
.github/workflows/: bench.yml  build_test.yml  ci_benchmark.yml  ci_cachegrind.yml  ci_doc_commenter.yml  ci_docs.yml  ci_feature_matrix.yml  ci_fortran.yml  ci_julia.yml  ci_python.yml  coverage.yml  crates_publish.yml  lint.yml  python_wheels.yml  release.yml
addl/referenceImpls/ase/: eon.py
addl/referenceImpls/eon_cpp/: bench_con_reader  bench_con_reader.c
assets/branding/: README.md
benches/: ase_traj_vs_con.py  ase_xyz_vs_chemfiles_con.py  compare_readers.py  efficiency_ab_measure.py  efficiency_apis_profile.py  efficiency_apis_profile_robust.py  h5md_vs_con.py  iterator_bench.rs  make_plots.py  multiformat_traj.py  run_pgo_ab.sh
benches/results/: ase_traj_vs_con.json  ase_xyz_vs_chemfiles_con.json  design_ab_terra.json  efficiency_ab_detach_bulk_terra.json  efficiency_apis_terra.json  efficiency_improve_terra.json  h5md_vs_con.json  multiformat_traj_terra.json  multiformat_traj_terra_live.json  next_design_terra.json  pgo_ab_terra.json  pgo_profile_guided_terra.json  simd_ab_terra.json
benchmarks/: __init__.py  bench_readcon.py
docs/: export.el
docs/notebooks/: chemfiles_ingress.py  tutorial_core.py
docs/orgmode/: architecture.org  benchmarks.org  bindings.org  changelog.org  chemfiles-explain.org  chemfiles-howto.org  chemfiles-notebook.org  chemfiles-reference.org  chemfiles-tutorial.org  contributing.org  evolution.org  faq.org  getting-started.org  howto.org  index.org  issue-status.org  migrate.org  rpc.org  spec.org  tutorial.org  tutorials.org
docs/scripts/: fix_doc_links.py  generate_docs_figures.py
docs/source/: architecture.rst  benchmarks.rst  bindings.rst  changelog.rst  chemfiles-explain.rst  chemfiles-howto.rst  chemfiles-notebook.rst  chemfiles-reference.rst  chemfiles-tutorial.rst  conf.py  contributing.rst  evolution.rst  faq.rst  getting-started.rst  howto.rst  index.rst  issue-status.rst  migrate.rst  references.bib  rpc.rst  spec.rst  tutorial.rst  tutorials.rst
docs/source/_extra/schema/: con-metadata.schema.json
docs/source/_generated/: cachegrind_results.json  cachegrind_results.rst
docs/source/_static/: custom.css
docs/source/_templates/partials/: extra-foot.html  extra-head.html  site-foot.html  webfonts.html
docs/source/crates/readcon_core/: compression.rst  error.rst  ffi.rst  helpers.rst  iterators.rst  lib.rst  main.rst  parser.rst  python.rst  rpc.rst  types.rst  writer.rst
docs/source/crates/readcon_core/rpc/: client.rst  read_con_capnp.rst  server.rst
examples/: c_api_sample.c  c_metatensor_sample.c  cachegrind_harness.rs  cpp_api_sample.cpp  meson.build  profile_train.rs  rust_usage.rs
fortran/: README.md
fortran/ReadCon/: fpm.toml
fortran/ReadCon/example/: read_first.f90
fortran/ReadCon/src/: readcon.f90  readcon_mts_optional.f90.disabled
fortran/ReadCon/test/: test_read_con.f90
grammar/: con.pest
include/: readcon-core.h  readcon-core.hpp  readcon-metatensor.h
julia/ReadCon/: Project.toml  README.md
julia/ReadCon/src/: ReadCon.jl  types.jl  wrapper.jl
julia/ReadCon/test/: runtests.jl  test_chemfiles_selection.jl
resources/test/: cuh2.con  tiny_cuh2_charges_spins_magmoms.con  tiny_multi_cuh2.con  tiny_multi_cuh2.convel  water_min.xyz
schema/: ReadCon.capnp  con-metadata.schema.json
scripts/: check_codecov_config.sh  check_feature_matrix.sh  export-readme.sh  regen-capi-headers.sh  release-prep.sh  render_cachegrind_rst.py  rewrite_julia_lcov.py  run-chemfiles-notebook.sh  run-tutorial-core.sh  run_cachegrind_bench.sh  run_coverage_python.sh  run_coverage_rust.sh  run_fortran_tests.sh
src/: array.rs  chemfiles_import.rs  chemfiles_import_imp.rs  chemfiles_selection.rs  chemfiles_selection_imp.rs  compression.rs  convert.rs  cuda_array.rs  error.rs  ffi.rs  grammar.rs  helpers.rs  index_proj.rs  iterators.rs  lib.rs  main.rs  metatensor_export.rs  parser.rs  python.rs  storage_dtype.rs  types.rs  units.rs  writer.rs
src/rpc/: client.rs  mod.rs  server.rs
tests/: codecov_config.rs  convelwriter.rs  conwriter.rs  coverage_boost.rs  docs_design_justification.rs  ffi_builder_bulk.rs  ffi_compressed_writer.rs  parsecon.rs  parseconvel.rs  parseforces.rs  parsesections_extra.rs  spec_metadata_schema.rs
tests/common/: mod.rs
tests/python/: test_ase.py  test_chemfiles_import.py  test_chemfiles_selection.py  test_convert_migrate.py  test_index_proj.py  test_readcon.py  test_tutorial_chemfiles.py  test_tutorial_core.py
