[package]
name = "readcon-core"
version = "0.5.2"
edition = "2024"
rust-version = "1.88"
description = "An oxidized single and multiple CON file reader and writer with FFI bindings for ergonomic C/C++ usage."
repository = "https://github.com/lode-org/readcon-core"
keywords = ["Parser", "comp-chem", "file-format"]
categories = ["filesystem", "parser-implementations", "science"]
license = "MIT"

[lib]
name = "readcon_core"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
parallel = ["rayon"]
rpc = ["dep:capnp", "dep:capnp-rpc", "dep:capnpc", "dep:tokio", "dep:tokio-util", "dep:futures"]
python = ["dep:pyo3"]

[dependencies]
fast-float2 = "0.2"
memmap2 = "0.9"
rayon = { version = "1.10", optional = true }
capnp = { version = "0.20", optional = true }
capnp-rpc = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures = { version = "0.3", optional = true }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[dev-dependencies]
cog = "0.1.0"
criterion = { version = "0.6.0", features = ["html_reports"] }

[[example]]
name = "rust_usage"

[[bench]]
name = "iterator_bench"
harness = false

[build-dependencies]
cbindgen = "0.29.0"
capnpc = { version = "0.20", optional = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
