option('with_examples', type : 'boolean',
       value : false,
       description: 'Builds and runs FFI examples',
      )
option('with_cpp', type : 'boolean',
       value : false,
       description: 'Builds and runs CPP FFI examples',
      )
option('with_tests', type : 'boolean',
       value : false,
       description: 'Builds and runs tests',
      )
