[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "readcon"
version = "0.13.0"
description = "Python bindings for readcon-core CON/convel file parser"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["parser", "comp-chem", "file-format", "con", "eon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/lode-org/readcon-core"
Documentation = "https://lode-org.github.io/readcon-core/"
Repository = "https://github.com/lode-org/readcon-core"
Issues = "https://github.com/lode-org/readcon-core/issues"
Changelog = "https://github.com/lode-org/readcon-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Declares the chemfiles-capable install path. Pre-built wheels on PyPI are
# built *without* linking libchemfiles (`has_chemfiles_support()` is False).
# To enable import/selection, install from this source tree (or sdist) with
# the Rust feature turned on, e.g.:
#   MATURIN_PEP517_ARGS="--features python,chemfiles" pip install ".[chemfiles]"
#   maturin develop --features python,chemfiles
# The extra itself is empty (no PyPI deps); it documents intent for full builds.
chemfiles = []

[tool.maturin]
features = ["python"]
module-name = "readcon"
