[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "readcon"
version = "0.14.0"
description = "Python bindings for readcon-core CON/convel file parser"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["parser", "comp-chem", "file-format", "con", "eon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/lode-org/readcon-core"
Documentation = "https://lode-org.github.io/readcon-core/"
Repository = "https://github.com/lode-org/readcon-core"
Issues = "https://github.com/lode-org/readcon-core/issues"
Changelog = "https://github.com/lode-org/readcon-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Full wheels with libchemfiles linked are published as the *separate* PyPI
# project `readcon-chemfiles` (same import name `readcon`). Prefer installing
# that alone — do not install both `readcon` and `readcon-chemfiles` in one
# environment (module clash). The extra pulls the matching version:
#   pip install 'readcon[chemfiles]'   # adds readcon-chemfiles; remove lean if unsure
#   pip install readcon-chemfiles      # recommended for import/selection
# Source-only alternative:
#   MATURIN_PEP517_ARGS="--features python,chemfiles" pip install .
chemfiles = ["readcon-chemfiles==0.14.0"]

[tool.maturin]
features = ["python"]
module-name = "readcon"
